--- a/csharp-example/csharp-example/csharp-example.csproj
+++ b/csharp-example/csharp-example/csharp-example.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Lesson 3\FirefoxTests.cs" />
     <Compile Include="Lesson 3\IETests.cs" />
     <Compile Include="Lesson 4\Ex7.cs" />
+    <Compile Include="Lesson 4\Ex8.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Lesson 3\TestBase.cs" />
   </ItemGroup>
