--- a/csharp-example/csharp-example/csharp-example.csproj
+++ b/csharp-example/csharp-example/csharp-example.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Lesson 5\ColorHelper.cs" />
     <Compile Include="Lesson 5\Ex10.cs" />
     <Compile Include="Lesson 5\Ex9.cs" />
+    <Compile Include="Lesson 6\Ex11.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
