--- a/csharp-example/csharp-example/csharp-example.csproj
+++ b/csharp-example/csharp-example/csharp-example.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Lesson 6\Ex11.cs" />
     <Compile Include="Lesson 6\Ex12.cs" />
     <Compile Include="Lesson 7\Ex13.cs" />
+    <Compile Include="Lesson 8\Ex14.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
