--- a/csharp-example/csharp-example/packages.config
+++ b/csharp-example/csharp-example/packages.config
@@ -4,6 +4,7 @@
   <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net461" />
   <package id="Selenium.Support" version="3.9.1" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.9.1" targetFramework="net461" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.35.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.36.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.IEDriver" version="3.9.0" targetFramework="net461" />
+  <package id="SeleniumLog" version="3.5" targetFramework="net461" developmentDependency="true" />
 </packages>
