--- a/csharp-example/csharp-example/packages.config
+++ b/csharp-example/csharp-example/packages.config
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Flurl" version="1.0.10" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="RemoteBrowserMobProxy" version="0.0.1" targetFramework="net461" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net461" />
-  <package id="Selenium.Support" version="3.9.1" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.9.1" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.11.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.11.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.36.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver.IEDriver" version="3.9.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.10.0" targetFramework="net461" />
   <package id="SeleniumLog" version="3.5" targetFramework="net461" developmentDependency="true" />
+  <package id="Vse.Web.Serialization.ControlledSerializationJsonConverter" version="1.0.4" targetFramework="net461" />
+  <package id="WebApiContrib.Formatting.JavaScriptSerializer" version="0.9.4.0" targetFramework="net461" />
 </packages>
