--- a/csharp-example/csharp-example/csharp-example.csproj
+++ b/csharp-example/csharp-example/csharp-example.csproj
@@ -60,32 +60,32 @@
     <Compile Include="Lesson 10\Ex17.cs" />
     <Compile Include="Lesson 10\Ex18.cs" />
     <Compile Include="Lesson 10\Ex18_2.cs" />
-    <Compile Include="Lesson 3\ChromeTests.cs" />
+    <Compile Include="Lesson 03\ChromeTests.cs" />
     <Compile Include="DkorExampleTest.cs" />
     <Compile Include="DkorLogin.cs" />
-    <Compile Include="Lesson 3\ESRFirefox.cs" />
-    <Compile Include="Lesson 3\FirefoxTests.cs" />
-    <Compile Include="Lesson 3\IETests.cs" />
-    <Compile Include="Lesson 4\Ex7.cs" />
-    <Compile Include="Lesson 4\Ex8.cs" />
-    <Compile Include="Lesson 5\ColorHelper.cs" />
-    <Compile Include="Lesson 5\Ex10.cs" />
-    <Compile Include="Lesson 5\Ex9.cs" />
-    <Compile Include="Lesson 6\Ex11.cs" />
-    <Compile Include="Lesson 6\Ex12.cs" />
-    <Compile Include="Lesson 7\Ex13.cs" />
-    <Compile Include="Lesson 8\Ex14.cs" />
-    <Compile Include="Lesson 9\Ex15.cs" />
-    <Compile Include="Page Objects Model\App\Application.cs" />
-    <Compile Include="Page Objects Model\Model\Customer.cs" />
-    <Compile Include="Page Objects Model\Pages\AdminPanelLoginPage.cs" />
-    <Compile Include="Page Objects Model\Pages\CartPage.cs" />
-    <Compile Include="Page Objects Model\Pages\Page.cs" />
-    <Compile Include="Page Objects Model\Pages\ProductPage.cs" />
-    <Compile Include="Page Objects Model\Pages\StoreMainPage.cs" />
-    <Compile Include="Page Objects Model\Tests\WorkingWithCartTests.cs" />
-    <Compile Include="Page Objects Model\Tests\DataProviders.cs" />
-    <Compile Include="Page Objects Model\Tests\TestBase.cs" />
+    <Compile Include="Lesson 03\ESRFirefox.cs" />
+    <Compile Include="Lesson 03\FirefoxTests.cs" />
+    <Compile Include="Lesson 03\IETests.cs" />
+    <Compile Include="Lesson 04\Ex7.cs" />
+    <Compile Include="Lesson 04\Ex8.cs" />
+    <Compile Include="Lesson 05\ColorHelper.cs" />
+    <Compile Include="Lesson 05\Ex10.cs" />
+    <Compile Include="Lesson 05\Ex9.cs" />
+    <Compile Include="Lesson 06\Ex11.cs" />
+    <Compile Include="Lesson 06\Ex12.cs" />
+    <Compile Include="Lesson 07\Ex13.cs" />
+    <Compile Include="Lesson 08\Ex14.cs" />
+    <Compile Include="Lesson 09\Ex15.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\App\Application.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Model\Customer.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Pages\AdminPanelLoginPage.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Pages\CartPage.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Pages\Page.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Pages\ProductPage.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Pages\StoreMainPage.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Tests\WorkingWithCartTests.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Tests\DataProviders.cs" />
+    <Compile Include="Lesson 11 - Page Objects Model\Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBaseOld.cs" />
   </ItemGroup>
